init models, controllers, views, configure Devise

--- a/app/views/railway_stations/_form.html.erb
+++ b/app/views/railway_stations/_form.html.erb
@@ -1,22 +1,12 @@
 <%= form_with(model: railway_station) do |form| %>
-  <% if railway_station.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(railway_station.errors.count, "error") %> prohibited this railway_station from being saved:</h2>
-
-      <ul>
-        <% railway_station.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render 'shared/errors', object: railway_station %>
 
   <div>
     <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title, class: 'form-control', required: true %>
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit "#{ railway_station.new_record? ? 'Create' : 'Edit' }" %>
   </div>
 <% end %>
