--- a/app/views/railway_stations/show.html.erb
+++ b/app/views/railway_stations/show.html.erb
@@ -2,6 +2,15 @@
 
 <%= render @railway_station %>
 
+<% if @railway_station.routes.nil? %>
+  <p>Станция не имеет ни одного маршрута!</p>
+<% else %>
+  <p>Станция входит в следующие маршруты:</p>
+  <% @railway_station.routes.each do |route| %>
+    <li><%= route.name %></li>
+  <% end %>
+<% end %>
+
 <div>
   <%= link_to "Edit this railway station", edit_railway_station_path(@railway_station) %> |
   <%= link_to "Back to railway stations", railway_stations_path %>
