--- a/app/views/trains/_form.html.erb
+++ b/app/views/trains/_form.html.erb
@@ -1,19 +1,14 @@
 <%= form_with(model: train) do |form| %>
-  <% if train.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(train.errors.count, "error") %> prohibited this train from being saved:</h2>
-
-      <ul>
-        <% train.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render 'shared/errors', object: train %>
 
   <div>
     <%= form.label :number, style: "display: block" %>
     <%= form.text_field :number %>
+  </div>
+
+  <div>
+    <%= form.label :current_station, "Текущая станция" %>
+    <%= form.collection_select :current_station_id, RailwayStation.all, :id, :title %>
   </div>
 
   <div>
