--- a/app/views/trains/index.html.erb
+++ b/app/views/trains/index.html.erb
@@ -2,13 +2,6 @@
 
 <h1>Trains</h1>
 
-<div id="trains">
-  <% @trains.each do |train| %>
-    <%= render train %>
-    <p>
-      <%= link_to "Show this train", train %>
-    </p>
-  <% end %>
-</div>
+<%= render @trains %>
 
 <%= link_to "New train", new_train_path %>
