--- a/app/views/railway_stations/index.html.erb
+++ b/app/views/railway_stations/index.html.erb
@@ -1,14 +1,7 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Railway stations</h1>
+<h1>Railway stations: </h1>
 
-<div id="railway_stations">
-  <% @railway_stations.each do |railway_station| %>
-    <%= render railway_station %>
-    <p>
-      <%= link_to "Show this railway station", railway_station %>
-    </p>
-  <% end %>
-</div>
+<%= render @railway_stations %>
 
 <%= link_to "New railway station", new_railway_station_path %>
