add bootstrap, update layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="main-container">
     <%= render 'shared/flash' %>
 
     <% if user_signed_in? %>
