--- a/app/views/railway_stations/_railway_station.html.erb
+++ b/app/views/railway_stations/_railway_station.html.erb
@@ -1,7 +1,11 @@
-<div id="<%= dom_id railway_station %>">
-  <p>
-    <strong>Title:</strong>
-    <%= railway_station.title %>
-  </p>
+<div class="card mb-2" id="<%= dom_id railway_station %>">
+  <div class="card-body">
+    <h5 class="card-title">
+      <%= railway_station.title %>
+    </h5>
 
+    <% unless request.path == railway_station_path(railway_station)  %>
+      <%= link_to 'Show', railway_station_path(railway_station), class: 'btn btn-primary' %>
+    <% end %>
+  </div>
 </div>
