--- a/app/views/railway_stations/_railway_station.html.erb
+++ b/app/views/railway_stations/_railway_station.html.erb
@@ -5,7 +5,7 @@
     </h5>
 
     <% unless request.path == railway_station_path(railway_station)  %>
-      <%= link_to 'Show', railway_station_path(railway_station), class: 'btn btn-primary' %>
+      <%= link_to 'Show', railway_station_path(railway_station) %>
     <% end %>
   </div>
 </div>
