--- a/app/views/trains/_form.html.erb
+++ b/app/views/trains/_form.html.erb
@@ -3,20 +3,20 @@
 
   <div>
     <%= form.label :number, style: "display: block" %>
-    <%= form.text_field :number %>
+    <%= form.text_field :number, class: "form-control" %>
   </div>
 
   <div>
     <%= form.label :current_station, "Текущая станция" %>
-    <%= form.collection_select :current_station_id, RailwayStation.all, :id, :title %>
+    <%= form.collection_select :current_station_id, RailwayStation.all, :id, :title, {}, { class: "form-select" } %>
   </div>
 
-  <div>
+  <div class="mb-2">
     <%= form.label :current_route, "Текущий маршрут" %>
-    <%= form.collection_select :current_route_id, Route.all, :id, :name %>
+    <%= form.collection_select :current_route_id, Route.all, :id, :name, {}, { class: "form-select" } %>
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit 'Submit', class: "btn btn-primary" %>
   </div>
 <% end %>
