--- a/app/views/trains/show.html.erb
+++ b/app/views/trains/show.html.erb
@@ -2,6 +2,13 @@
 
 <%= render @train %>
 
+<div class="container d-flex align-items-center justify-content-center gap-2 mb-4">
+  <%= link_to "Edit this train", edit_train_path(@train), class: "btn btn-primary" %>
+  <%= link_to "Back to trains", trains_path, class: "btn btn-primary" %>
+
+  <%= button_to "Destroy this train", @train, method: :delete, class: "btn btn-danger" %>
+</div>
+
 <% if @train.current_station.nil? %>
   Поезд не находится на какой-либо станции
 <% else %>
@@ -13,10 +20,3 @@
 <% else %>
   <p>Маршрут поезда: <strong><%= @train.current_route.name %></strong></p>
 <% end %>
-
-<div>
-  <%= link_to "Edit this train", edit_train_path(@train) %> |
-  <%= link_to "Back to trains", trains_path %>
-
-  <%= button_to "Destroy this train", @train, method: :delete %>
-</div>
