--- a/app/views/railway_stations/index.html.erb
+++ b/app/views/railway_stations/index.html.erb
@@ -1,7 +1,5 @@
-<p style="color: green"><%= notice %></p>
+<h1>Станции</h1>
 
-<h1>Railway stations: </h1>
+<%= link_to "Новая станция", new_railway_station_path %>
 
 <%= render @railway_stations %>
-
-<%= link_to "New railway station", new_railway_station_path %>
