--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -1,4 +1,5 @@
-<%= link_to 'Create new route', new_route_path %>
+<h1>Маршруты</h1>
+<%= link_to 'Новый маршрут', new_route_path %>
 <br>
 
 <% @routes.each do |route| %>
