--- a/app/views/routes/new.html.erb
+++ b/app/views/routes/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Create new route: </h1>
+<h1>Новый маршрут: </h1>
 <%= render 'form' %>
 
 <br>
-<%= link_to 'Back to all', routes_path %>
+<%= link_to 'Назад к маршрутам', routes_path %>
