--- a/app/views/trains/_train.html.erb
+++ b/app/views/trains/_train.html.erb
@@ -5,7 +5,7 @@
     </h5>
 
     <% unless request.path == train_path(train)  %>
-      <%= link_to 'Show', train_path(train) %>
+      <%= link_to 'Подробнее', train_path(train) %>
     <% end %>
   </div>
 </div>
