--- a/app/views/railway_stations/new.html.erb
+++ b/app/views/railway_stations/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New railway station</h1>
+<h1>Новая станция: </h1>
 
 <%= render "form", railway_station: @railway_station %>
 
 <br>
 
 <div>
-  <%= link_to "Back to railway stations", railway_stations_path %>
+  <%= link_to "Назад к списку всех станций", railway_stations_path %>
 </div>
