--- a/app/views/railway_stations/show.html.erb
+++ b/app/views/railway_stations/show.html.erb
@@ -1,12 +1,10 @@
-<p style="color: green"><%= notice %></p>
-
 <%= render @railway_station %>
 
 <div class="container d-flex align-items-center justify-content-center gap-2 mb-4">
-  <%= link_to "Edit this railway station", edit_railway_station_path(@railway_station), class: "btn btn-primary" %>
-  <%= link_to "Back to railway stations", railway_stations_path, class: "btn btn-primary" %>
+  <%= link_to "Изменить станцию", edit_railway_station_path(@railway_station) %>
+  <%= link_to "Назад к списку станций", railway_stations_path %>
 
-  <%= button_to "Destroy this railway station", @railway_station, method: :delete, class: "btn btn-danger" %>
+  <%= link_to "Удалить станцию", @railway_station, data: { turbo_method: :delete, turbo_confirm: "Вы уверены?"} %>
 </div>
 
 <% if @railway_station.routes.nil? %>
