--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary mb-2">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">tutu</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to 'Railway Stations', railway_stations_path, class: "nav-link active" %>
+          <%= link_to 'Станции', railway_stations_path, class: "nav-link active" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Trains', trains_path, class: "nav-link active" %>
+          <%= link_to 'Поезда', trains_path, class: "nav-link active" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Routes', routes_path, class: "nav-link active" %>
+          <%= link_to 'Маршруты', routes_path, class: "nav-link active" %>
         </li>
       </ul>
 
