--- a/app/views/trains/index.html.erb
+++ b/app/views/trains/index.html.erb
@@ -1,7 +1,6 @@
-<p style="color: green"><%= notice %></p>
+<h1>Поезда</h1>
 
-<h1>Trains</h1>
+<%= link_to "Новый поезд", new_train_path %>
 
 <%= render @trains %>
 
-<%= link_to "New train", new_train_path %>
