--- a/app/views/trains/new.html.erb
+++ b/app/views/trains/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New train</h1>
+<h1>Новый поезд:</h1>
 
 <%= render "form", train: @train %>
 
 <br>
 
 <div>
-  <%= link_to "Back to trains", trains_path %>
+  <%= link_to "Назад к поездам", trains_path %>
 </div>
