--- a/app/views/trains/show.html.erb
+++ b/app/views/trains/show.html.erb
@@ -1,12 +1,10 @@
-<p style="color: green"><%= notice %></p>
-
 <%= render @train %>
 
 <div class="container d-flex align-items-center justify-content-center gap-2 mb-4">
-  <%= link_to "Edit this train", edit_train_path(@train), class: "btn btn-primary" %>
-  <%= link_to "Back to trains", trains_path, class: "btn btn-primary" %>
+  <%= link_to "Edit this train", edit_train_path(@train) %>
+  <%= link_to "Back to trains", trains_path  %>
 
-  <%= button_to "Destroy this train", @train, method: :delete, class: "btn btn-danger" %>
+  <%= link_to "Destroy this train", @train, data: { turbo_method: :delete, turbo_confirm: "Вы уверены?" } %>
 </div>
 
 <% if @train.current_station.nil? %>
