--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -4,6 +4,10 @@
     <%= f.text_field :name, class: "form-control" %>
   </div>
 
+  <div class="mb-2">
+    <%= f.label :%>
+  </div>
+
   <div>
     <%= f.submit 'Создать', class: 'btn btn-primary' %>
   </div>
