--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -5,7 +5,8 @@
   </div>
 
   <div class="mb-2">
-    <%= f.label :%>
+    <%= f.label :railway_station_ids, "Список станций" %>
+    <%= f.collection_select :railway_station_ids, RailwayStation.all, :id, :title, {}, multiple: true %>
   </div>
 
   <div>
