--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -17,10 +17,10 @@
 <% end %>
 
 <strong>Список станций на маршруте:</strong>
-<% if @route.railway_stations.empty? %>
+<% if @stations.empty? %>
   <p>На этом маршруте нет ни одной станции</p>
 <% else %>
-  <% @route.railway_stations.each do |station| %>
+  <% @stations.each do |station| %>
     <%= render partial: 'railway_stations/railway_station', locals: { railway_station: station, position: station.position_in_route(@route) } %>
   <% end %>
 <% end %>
