--- a/app/views/trains/show.html.erb
+++ b/app/views/trains/show.html.erb
@@ -7,14 +7,23 @@
   <%= link_to "Destroy this train", @train, data: { turbo_method: :delete, turbo_confirm: "Вы уверены?" } %>
 </div>
 
-<% if @train.current_station.nil? %>
-  Поезд не находится на какой-либо станции
-<% else %>
-  <p>Поезд на станции: <strong><%= @train.current_station.title %></strong></p>
-<% end %>
+<div class="row">
+  <%= link_to 'К управлению вагонами', train_carriages_path(@train) %>
+</div>
 
-<% if @train.current_route.nil? %>
-  Поезду не назначен маршрут
-<% else %>
-  <p>Маршрут поезда: <strong><%= @train.current_route.name %></strong></p>
-<% end %>
+
+<div class="row">
+  <% if @train.current_station.nil? %>
+    Поезд не находится на какой-либо станции
+  <% else %>
+    <p>Поезд на станции: <strong><%= @train.current_station.title %></strong></p>
+  <% end %>
+</div>
+
+<div class="row">
+  <% if @train.current_route.nil? %>
+    Поезду не назначен маршрут
+  <% else %>
+    <p>Маршрут поезда: <strong><%= @train.current_route.name %></strong></p>
+  <% end %>
+</div>
