--- a/app/views/railway_stations/_railway_station.html.erb
+++ b/app/views/railway_stations/_railway_station.html.erb
@@ -4,6 +4,12 @@
       <%= railway_station.title %>
     </h5>
 
+    <div class="row mb-2">
+      <div class="col">
+        <img src="<%= asset_path('station') %>" class="img">
+      </div>
+    </div>
+
     <% if local_assigns[:position].present? %>
       <p>Порядковый номер: <%= position %></p>
     <% end %>
