--- a/app/views/routes/edit.html.erb
+++ b/app/views/routes/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Edit route: </h1>
+<h1>Изменить маршрут: </h1>
 <%= render 'form' %>
 
 <br>
-<%= link_to 'Back to all', routes_path %>
+<%= link_to 'Назад', routes_path %>
