--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,3 +2,17 @@
   max-width: 800px;
   margin: 0 auto;
 }
+
+.img {
+  width: 150px;
+  height: 150px;
+  border-radius: 5%;
+  object-fit: cover;
+  filter: blur(0.5px);
+}
+
+.img-train {
+  width: 150px;
+  height: 150px;
+  border-radius: 5%;
+}
