--- a/app/views/routes/_route.html.erb
+++ b/app/views/routes/_route.html.erb
@@ -4,6 +4,12 @@
       <%= route.name %>
     </h5>
 
+    <div class="row mb-2">
+      <div class="col">
+        <img src="<%= asset_path('route') %>" class="img">
+      </div>
+    </div>
+
     <% unless request.path == route_path(route)  %>
       <%= link_to 'Подробнее', route_path(route) %>
     <% end %>
