add auto-numbering for carriage

--- a/app/views/carriages/index.html.erb
+++ b/app/views/carriages/index.html.erb
@@ -2,6 +2,6 @@
 
 <%= link_to 'Новый вагон', new_train_carriage_path(@train) %>
 
-<% @train.carriages.each do |car| %>
+<% @carriages.each do |car| %>
   <%= render partial: 'carriage', locals: { carriage: car } %>
 <% end %>
