--- a/app/views/railway_stations/_form.html.erb
+++ b/app/views/railway_stations/_form.html.erb
@@ -7,6 +7,6 @@
   </div>
 
   <div>
-    <%= form.submit "#{ railway_station.new_record? ? 'Create' : 'Edit' }", class: 'btn btn-primary ' %>
+    <%= form.submit 'Сохранить', class: 'btn btn-primary ' %>
   </div>
 <% end %>
