--- a/app/views/railway_stations/new.html.erb
+++ b/app/views/railway_stations/new.html.erb
@@ -1,3 +1,5 @@
+<%= link_to 'Назад', railway_stations_path %>
+
 <h1>Новая станция: </h1>
 
 <%= render "form", railway_station: @railway_station %>
