--- a/app/views/routes/edit.html.erb
+++ b/app/views/routes/edit.html.erb
@@ -1,5 +1,4 @@
+<%= link_to 'Назад', route_path(@route) %>
+
 <h1>Изменить маршрут: </h1>
 <%= render 'form' %>
-
-<br>
-<%= link_to 'Назад', routes_path %>
