--- a/app/views/routes/new.html.erb
+++ b/app/views/routes/new.html.erb
@@ -1,5 +1,4 @@
+<%= link_to 'Назад', routes_path %>
+
 <h1>Новый маршрут: </h1>
 <%= render 'form' %>
-
-<br>
-<%= link_to 'Назад к маршрутам', routes_path %>
