--- a/app/views/trains/edit.html.erb
+++ b/app/views/trains/edit.html.erb
@@ -1,10 +1,5 @@
-<h1>Editing train</h1>
+<%= link_to 'Назад', train_path(@train) %>
+
+<h1>Изменить поезд:</h1>
 
 <%= render "form", train: @train %>
-
-<br>
-
-<div>
-  <%= link_to "Show this train", @train %> |
-  <%= link_to "Back to trains", trains_path %>
-</div>
