--- a/app/views/trains/new.html.erb
+++ b/app/views/trains/new.html.erb
@@ -1,9 +1,5 @@
+<%= link_to 'Назад', trains_path %>
+
 <h1>Новый поезд:</h1>
 
 <%= render "form", train: @train %>
-
-<br>
-
-<div>
-  <%= link_to "Назад к поездам", trains_path %>
-</div>
