--- a/app/views/carriages/_form.html.erb
+++ b/app/views/carriages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @carriage, url: train_carriages_path(@train), local: true) do |form| %>
+<%= form_with(model: @carriage_for_form, url: train_carriage_path(@train, @carriage_for_form), local: true) do |form| %>
   <%= render 'shared/errors', object: @carriage %>
 
   <%= form.label :type, "Тип вагона" %>
@@ -7,11 +7,6 @@
    ['Плацкартный', 'EconomCarriage'],
    ['СВ', 'SvCarriage'],
    ['Сидячий', 'SeatOnlyCarriage']], {}, { id: 'carriage_type', class: 'form-select' }  %>
-
-  <div class="mb-2">
-    <%= form.label :number, "Номер вагона" %>
-    <%= form.text_field :number, class: "form-control" %>
-  </div>
 
   <div class="mb-2">
     <%= form.label :top_seats, "Верхние места" %>
@@ -39,6 +34,6 @@
   </div>
 
   <div class="mb-2">
-    <%= form.submit 'Создать', class: 'btn btn-primary' %>
+    <%= form.submit 'Сохранить', class: 'btn btn-primary' %>
   </div>
 <% end %>
