--- a/app/views/carriages/index.html.erb
+++ b/app/views/carriages/index.html.erb
@@ -1,6 +1,10 @@
+<%= link_to 'Назад', train_path(@train) %>
+
 <%= render partial: 'trains/train', locals: { train: @train } %>
 
-<%= link_to 'Новый вагон', new_train_carriage_path(@train) %>
+<div class="mb-2">
+  <%= link_to 'Новый вагон', new_train_carriage_path(@train), class: 'btn btn-secondary' %>
+</div>
 
 <% @carriages.each do |car| %>
   <%= render partial: 'carriage', locals: { carriage: car } %>
