--- a/app/views/railway_stations/edit.html.erb
+++ b/app/views/railway_stations/edit.html.erb
@@ -1,10 +1,5 @@
+<%= link_to 'Назад', railway_station_path(@railway_station) %>
+
 <h1>Изменить станцию: </h1>
 
 <%= render "form", railway_station: @railway_station %>
-
-<br>
-
-<div>
-  <%= link_to "Show this railway station", @railway_station %> |
-  <%= link_to "Back to railway stations", railway_stations_path %>
-</div>
