--- a/app/views/trains/show.html.erb
+++ b/app/views/trains/show.html.erb
@@ -8,6 +8,15 @@
 </div>
 
 <div class="mb-2">
+  <%= form_with(model: @train, local: true, class: "mb-3") do |f| %>
+    <div class="form-check">
+      <%= f.check_box :sort_from_head, class: "form-check-input", onchange: 'this.form.submit()' %>
+      <%= f.label :sort_from_head, "Сортировать вагоны с головы поезда", class: "form-check-label" %>
+    </div>
+  <% end %>
+</div>
+
+<div class="mb-2">
   <%= link_to 'К управлению вагонами', train_carriages_path(@train) %>
 </div>
 
