--- a/app/views/railway_stations/_railway_station.html.erb
+++ b/app/views/railway_stations/_railway_station.html.erb
@@ -14,6 +14,16 @@
       <p>Порядковый номер: <%= position %></p>
     <% end %>
 
+    <% if show_time_for_station? %>
+      <% if local_assigns[:departure_time].present? %>
+        <p>Отправление: <%= departure_time.strftime("%d.%m.%Y %H:%M") %></p>
+      <% end %>
+
+      <% if local_assigns[:arrival_time].present? %>
+        <p>Прибытие: <%= arrival_time.strftime("%d.%m.%Y %H:%M") %></p>
+      <% end %>
+    <% end %>
+
     <% unless request.path == railway_station_path(railway_station)  %>
       <%= link_to 'Подробнее', railway_station_path(railway_station) %>
     <% end %>
