--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -20,6 +20,11 @@
             <%= rsr.label :position, "Порядковый номер:" %>
             <%= rsr.number_field :position, class: 'form-control' %>
           </div>
+
+          <div class="mb-2">
+            <%= rsr.label :departure_time, "Время отправления:" %>
+            <%= rsr.datetime_select :departure_time, include_seconds: false, default: Time.current %>
+          </div>
         </div>
       <% end %>
     </div>
