add train search functionality

--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <%= link_to 'Маршруты', routes_path, class: "nav-link active" %>
         </li>
+        <li class="nav-item">
+          <%= link_to 'Поиск поездов', new_searches_path, class: "nav-link active" %>
+        </li>
       </ul>
 
       <ul class="navbar-nav ms-auto">
