add dates for train on search results

--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -6,6 +6,10 @@
     <% @routes.each do |route| %>
       <% route.trains.each do |train| %>
         <%= render partial: 'trains/train', locals: { train: train } %>
+      <tr>
+        <td>Отправление: <%= route.departure_time || "-" %></td>
+        <td>Прибытие: <%= route.arrival_time || "-" %></td>
+      </tr>
       <% end %>
     <% end %>
   </table>
