--- a/app/views/tickets/_ticket.html.erb
+++ b/app/views/tickets/_ticket.html.erb
@@ -6,8 +6,9 @@
 
     <p>Имя пассажира: <%= ticket.passenger_name %></p>
     <p>Паспортные данные: <%= ticket.passport_number %></p>
-    <p>Станция отправления: <%= ticket.departure_station_id %></p>
-    <p>Станция прибытия: <%= ticket.arrival_station_id %></p>
+    <p>Станция отправления: <%= ticket.departure_station.title %></p>
+    <p>Станция прибытия: <%= ticket.arrival_station.title %></p>
+    <p>Номер поезда: <%= ticket.train_id %></p>
     
     <%= link_to 'Сдать билет', user_ticket_path(current_user, ticket), data: { turbo_method: :delete, turbo_confirm: "Вы уверены?" }  %>
   </div>
