--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -19,6 +19,14 @@
           <li class="nav-item">
             <%= link_to 'Поиск поездов', new_searches_path, class: "nav-link active" %>
           </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to 'Поиск Билетов', new_searches_path, class: "nav-link active" %>
+          </li>
+
+          <li class="nav-item">
+            <%= link_to 'Мои билеты', user_tickets_path(current_user), class: "nav-link active" %>
+          </li>
         <% end %>
       </ul>
 
