--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary mb-2">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">tutu</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-white mb-2 w-100">
+  <div class="container main-container">
+    <a class="navbar-brand" href="<%= new_searches_path %>">tutu</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
