--- a/app/views/admin/routes/_form.html.erb
+++ b/app/views/admin/routes/_form.html.erb
@@ -30,6 +30,8 @@
             <%= rsr.label :departure_time, "Время отправления:" %>
             <%= rsr.datetime_select :departure_time, include_seconds: false, default: Time.current %>
           </div>
+
+          <button type="button" class="btn btn-secondary remove-station">Удалить станцию</button>
         </div>
       <% end %>
     </div>
@@ -43,28 +45,54 @@
 <% end %>
 
 <script>
-  document.addEventListener('DOMContentLoaded', function() {
+  function initializeStationFields() {
     const stationsContainer = document.getElementById('stations');
     const addStationButton = document.getElementById('add-station');
-
-    addStationButton.addEventListener('click', function() {
-      const newStationFields = `
-        <div class="station-fields mb-2">
-          <div class="mb-2">
-            <label for="route_railway_stations_routes_attributes_NEW_railway_station_id">Станция:</label>
-            <select class="form-select" name="route[railway_stations_routes_attributes][NEW][railway_station_id]" id="route_railway_stations_routes_attributes_NEW_railway_station_id">
-              <%= options_from_collection_for_select(RailwayStation.all, :id, :title) %>
-            </select>
-          </div>
-
-          <div class="mb-2">
-            <label for="route_railway_stations_routes_attributes_NEW_position">Порядковый номер:</label>
-            <input class="form-control" type="number" name="route[railway_stations_routes_attributes][NEW][position]" id="route_railway_stations_routes_attributes_NEW_position">
-          </div>
-        </div>
-      `;
-
-      stationsContainer.insertAdjacentHTML('beforeend', newStationFields.replace(/NEW/g, new Date().getTime()));
+    
+    stationsContainer.addEventListener('click', function(e) {
+      if (e.target.classList.contains('remove-station')) {
+        e.target.closest('.station-fields').remove();
+      }
     });
-  });
+    
+    if (!addStationButton.dataset.initialized) {
+      addStationButton.dataset.initialized = 'true';
+      
+      addStationButton.addEventListener('click', function() {
+        const newStationFields = `
+          <div class="station-fields mb-2">
+            <div class="mb-2">
+              <label for="route_railway_stations_routes_attributes_NEW_railway_station_id">Станция:</label>
+              <select class="form-select" name="route[railway_stations_routes_attributes][NEW][railway_station_id]" id="route_railway_stations_routes_attributes_NEW_railway_station_id">
+                <%= options_from_collection_for_select(RailwayStation.all, :id, :title) %>
+              </select>
+            </div>
+
+            <div class="mb-2">
+              <label for="route_railway_stations_routes_attributes_NEW_position">Порядковый номер:</label>
+              <input class="form-control" type="number" name="route[railway_stations_routes_attributes][NEW][position]" id="route_railway_stations_routes_attributes_NEW_position">
+            </div>
+
+            <div class="mb-2">
+              <label for="route_railway_stations_routes_attributes_NEW_arrival_time">Время прибытия:</label>
+              <%= datetime_select "route[railway_stations_routes_attributes][NEW]", :arrival_time, include_seconds: false, default: Time.current %>
+            </div>
+
+            <div class="mb-2">
+              <label for="route_railway_stations_routes_attributes_NEW_departure_time">Время отправления:</label>
+              <%= datetime_select "route[railway_stations_routes_attributes][NEW]", :departure_time, include_seconds: false, default: Time.current %>
+            </div>
+
+            <button type="button" class="btn btn-secondary remove-station">Удалить станцию</button>
+          </div>
+        `;
+
+        stationsContainer.insertAdjacentHTML('beforeend', newStationFields.replace(/NEW/g, new Date().getTime()));
+      });
+    }
+  }
+
+  document.addEventListener('DOMContentLoaded', initializeStationFields);
+  document.addEventListener('turbo:load', initializeStationFields);
+  document.addEventListener('turbolinks:load', initializeStationFields);
 </script>
