--- a/app/views/admin/railway_stations/_form.html.erb
+++ b/app/views/admin/railway_stations/_form.html.erb
@@ -7,6 +7,6 @@
   </div>
 
   <div>
-    <%= form.submit 'Сохранить', class: 'btn btn-primary ' %>
+    <%= form.submit 'Сохранить', class: 'btn btn-secondary' %>
   </div>
 <% end %>
